src/apu/antlr/clike/ScratchCLikeParser.java
// Generated from ScratchCLike.g4 by ANTLR 4.4

  package apu.antlr.clike;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ScratchCLikeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BOOL_TRUE=1, IF_TAG=2, ELSE_TAG=3, BOOL_AND=4, BOOL_OR=5, BOOL_NOT=6, 
		BOOL_EQUALS=7, BOOL_NEQUALS=8, BOOL_GT=9, BOOL_LT=10, BOOL_GTE=11, BOOL_LTE=12, 
		MATH_PLUS=13, MATH_MINUS=14, MATH_TIMES=15, MATH_DIVIDE=16, MATH_MODULO=17, 
		FOR_TAG=18, WHILE_TAG=19, METHOD_DEF_TAG=20, ATOMIC_METHOD_TAG=21, WHEN_TAG=22, 
		WHEN_CLICKED=23, WHEN_RECEIVE=24, WHEN_KEY=25, WHEN_CLONED=26, WHEN_SENSOR=27, 
		WHEN_FLAG=28, REPEAT_TAG=29, SINGLE_FRAME_TAG=30, ARRAY_TAG=31, IDENTIFIER=32, 
		STRINGLITERAL=33, OPENP=34, CLOSEP=35, OPENB=36, CLOSEB=37, SEMICOLON=38, 
		EQUALS=39, PLUS_EQUALS=40, MINUS_EQUALS=41, PLUS_PLUS=42, MINUS_MINUS=43, 
		COMMA=44, OPENC=45, CLOSEC=46, NUMBER=47, LETTER=48, WS=49, BlockComment=50, 
		LineComment=51;
	public static final String[] tokenNames = {
		"<INVALID>", "'true'", "'if'", "'else'", "'&&'", "'||'", "'!'", "'=='", 
		"'!='", "'>'", "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'", "'%'", 
		"'for'", "'while'", "'void'", "'@atomic'", "'@when'", "'clicked'", "'received'", 
		"'keyPressed'", "'cloned'", "'sensorGreaterThan'", "'greenFlag'", "'repeat'", 
		"'@singleframe'", "'array'", "IDENTIFIER", "STRINGLITERAL", "'('", "')'", 
		"'{'", "'}'", "';'", "'='", "'+='", "'-='", "'++'", "'--'", "','", "'['", 
		"']'", "NUMBER", "LETTER", "WS", "BlockComment", "LineComment"
	};
	public static final int
		RULE_eval = 0, RULE_body = 1, RULE_braces = 2, RULE_emptyBraces = 3, RULE_methodBody = 4, 
		RULE_line = 5, RULE_whenDef = 6, RULE_ifElse = 7, RULE_forLoop = 8, RULE_whileLoop = 9, 
		RULE_repeatSingleFrameLoop = 10, RULE_conditionItem = 11, RULE_conditionAndOr = 12, 
		RULE_conditionAndOrNoP = 13, RULE_condition = 14, RULE_methodCall = 15, 
		RULE_variableSet = 16, RULE_varExp = 17, RULE_arrayCreate = 18, RULE_arrayDef = 19, 
		RULE_paramsDef = 20, RULE_paramDef = 21, RULE_params = 22, RULE_mathExp = 23, 
		RULE_mathAdditionExp = 24, RULE_mathMultiplyExp = 25, RULE_mathAtomExp = 26, 
		RULE_arrayIdentifier = 27;
	public static final String[] ruleNames = {
		"eval", "body", "braces", "emptyBraces", "methodBody", "line", "whenDef", 
		"ifElse", "forLoop", "whileLoop", "repeatSingleFrameLoop", "conditionItem", 
		"conditionAndOr", "conditionAndOrNoP", "condition", "methodCall", "variableSet", 
		"varExp", "arrayCreate", "arrayDef", "paramsDef", "paramDef", "params", 
		"mathExp", "mathAdditionExp", "mathMultiplyExp", "mathAtomExp", "arrayIdentifier"
	};

	@Override
	public String getGrammarFileName() { return "ScratchCLike.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ScratchCLikeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class EvalContext extends ParserRuleContext {
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public EvalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eval; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScratchCLikeListener ) ((ScratchCLikeListener)listener).enterEval(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScratchCLikeListener ) ((ScratchCLikeListener)listener).exitEval(this);
		}
	}

	public final EvalContext eval() throws RecognitionException {
		EvalContext _localctx = new EvalContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_eval);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56); body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public List<BracesContext> braces() {
			return getRuleContexts(BracesContext.class);
		}
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public BracesContext braces(int i) {
			return getRuleContext(BracesContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScratchCLikeListener ) ((ScratchCLikeListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScratchCLikeListener ) ((ScratchCLikeListener)listener).exitBody(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF_TAG) | (1L << FOR_TAG) | (1L << WHILE_TAG) | (1L << METHOD_DEF_TAG) | (1L << WHEN_TAG) | (1L << REPEAT_TAG) | (1L << IDENTIFIER) | (1L << OPENB))) != 0)) {
				{
				setState(60);
				switch (_input.LA(1)) {
				case IDENTIFIER:
					{
					setState(58); line();
					}
					break;
				case IF_TAG:
				case FOR_TAG:
				case WHILE_TAG:
				case METHOD_DEF_TAG:
				case WHEN_TAG:
				case REPEAT_TAG:
				case OPENB:
					{
					setState(59); braces();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BracesContext extends ParserRuleContext {
		public WhenDefContext whenDef() {
			return getRuleContext(WhenDefContext.class,0);
		}
		public EmptyBracesContext emptyBraces() {
			return getRuleContext(EmptyBracesContext.class,0);
		}
		public MethodBodyContext methodBody() {
			return getRuleContext(MethodBodyContext.class,0);
		}
		public IfElseContext ifElse() {
			return getRuleContext(IfElseContext.class,0);
		}
		public WhileLoopContext whileLoop() {
			return getRuleContext(WhileLoopContext.class,0);
		}
		public ForLoopContext forLoop() {
			return getRuleContext(ForLoopContext.class,0);
		}
		public RepeatSingleFrameLoopContext repeatSingleFrameLoop() {
			return getRuleContext(RepeatSingleFrameLoopContext.class,0);
		}
		public BracesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_braces; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScratchCLikeListener ) ((ScratchCLikeListener)listener).enterBraces(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScratchCLikeListener ) ((ScratchCLikeListener)listener).exitBraces(this);
		}
	}

	public final BracesContext braces() throws RecognitionException {
		BracesContext _localctx = new BracesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_braces);
		try {
			setState(72);
			switch (_input.LA(1)) {
			case OPENB:
				enterOuterAlt(_localctx, 1);
				{
				setState(65); emptyBraces();
				}
				break;
			case METHOD_DEF_TAG:
				enterOuterAlt(_localctx, 2);
				{
				setState(66); methodBody();
				}
				break;
			case IF_TAG:
				enterOuterAlt(_localctx, 3);
				{
				setState(67); ifElse();
				}
				break;
			case FOR_TAG:
				enterOuterAlt(_localctx, 4);
				{
				setState(68); forLoop();
				}
				break;
			case WHILE_TAG:
				enterOuterAlt(_localctx, 5);
				{
				setState(69); whileLoop();
				}
				break;
			case REPEAT_TAG:
				enterOuterAlt(_localctx, 6);
				{
				setState(70); repeatSingleFrameLoop();
				}
				break;
			case WHEN_TAG:
				enterOuterAlt(_localctx, 7);
				{
				setState(71); whenDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EmptyBracesContext extends ParserRuleContext {
		public TerminalNode OPENB() { return getToken(ScratchCLikeParser.OPENB, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode CLOSEB() { return getToken(ScratchCLikeParser.CLOSEB, 0); }
		public EmptyBracesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_emptyBraces; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScratchCLikeListener ) ((ScratchCLikeListener)listener).enterEmptyBraces(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScratchCLikeListener ) ((ScratchCLikeListener)listener).exitEmptyBraces(this);
		}
	}

	public final EmptyBracesContext emptyBraces() throws RecognitionException {
		EmptyBracesContext _localctx = new EmptyBracesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_emptyBraces);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74); match(OPENB);
			setState(75); body();
			setState(76); match(CLOSEB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodBodyContext extends ParserRuleContext {
		public TerminalNode OPENB() { return getToken(ScratchCLikeParser.OPENB, 0); }
		public ParamsDefContext paramsDef() {
			return getRuleContext(ParamsDefContext.class,0);
		}
		public TerminalNode CLOSEP() { return getToken(ScratchCLikeParser.CLOSEP, 0); }
		public TerminalNode ATOMIC_METHOD_TAG() { return getToken(ScratchCLikeParser.ATOMIC_METHOD_TAG, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(ScratchCLikeParser.IDENTIFIER, 0); }
		public TerminalNode OPENP() { return getToken(ScratchCLikeParser.OPENP, 0); }
		public TerminalNode CLOSEB() { return getToken(ScratchCLikeParser.CLOSEB, 0); }
		public TerminalNode METHOD_DEF_TAG() { return getToken(ScratchCLikeParser.METHOD_DEF_TAG, 0); }
		public MethodBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScratchCLikeListener ) ((ScratchCLikeListener)listener).enterMethodBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScratchCLikeListener ) ((ScratchCLikeListener)listener).exitMethodBody(this);
		}
	}

	public final MethodBodyContext methodBody() throws RecognitionException {
		MethodBodyContext _localctx = new MethodBodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_methodBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78); match(METHOD_DEF_TAG);
			setState(80);
			_la = _input.LA(1);
			if (_la==ATOMIC_METHOD_TAG) {
				{
				setState(79); match(ATOMIC_METHOD_TAG);
				}
			}

			setState(82); match(IDENTIFIER);
			setState(83); match(OPENP);
			setState(85);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(84); paramsDef();
				}
			}

			setState(87); match(CLOSEP);
			setState(88); match(OPENB);
			setState(89); body();
			setState(90); match(CLOSEB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(ScratchCLikeParser.SEMICOLON, 0); }
		public VariableSetContext variableSet() {
			return getRuleContext(VariableSetContext.class,0);
		}
		public MethodCallContext methodCall() {
			return getRuleContext(MethodCallContext.class,0);
		}
		public ArrayCreateContext arrayCreate() {
			return getRuleContext(ArrayCreateContext.class,0);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScratchCLikeListener ) ((ScratchCLikeListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScratchCLikeListener ) ((ScratchCLikeListener)listener).exitLine(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(92); methodCall();
				}
				break;
			case 2:
				{
				setState(93); variableSet();
				}
				break;
			case 3:
				{
				setState(94); arrayCreate();
				}
				break;
			}
			setState(97); match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhenDefContext extends ParserRuleContext {
		public TerminalNode WHEN_FLAG() { return getToken(ScratchCLikeParser.WHEN_FLAG, 0); }
		public TerminalNode WHEN_CLONED() { return getToken(ScratchCLikeParser.WHEN_CLONED, 0); }
		public TerminalNode OPENB() { return getToken(ScratchCLikeParser.OPENB, 0); }
		public TerminalNode WHEN_KEY() { return getToken(ScratchCLikeParser.WHEN_KEY, 0); }
		public TerminalNode WHEN_CLICKED() { return getToken(ScratchCLikeParser.WHEN_CLICKED, 0); }
		public List<VarExpContext> varExp() {
			return getRuleContexts(VarExpContext.class);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode WHEN_TAG() { return getToken(ScratchCLikeParser.WHEN_TAG, 0); }
		public VarExpContext varExp(int i) {
			return getRuleContext(VarExpContext.class,i);
		}
		public TerminalNode WHEN_RECEIVE() { return getToken(ScratchCLikeParser.WHEN_RECEIVE, 0); }
		public TerminalNode WHEN_SENSOR() { return getToken(ScratchCLikeParser.WHEN_SENSOR, 0); }
		public TerminalNode CLOSEB() { return getToken(ScratchCLikeParser.CLOSEB, 0); }
		public WhenDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whenDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScratchCLikeListener ) ((ScratchCLikeListener)listener).enterWhenDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScratchCLikeListener ) ((ScratchCLikeListener)listener).exitWhenDef(this);
		}
	}

	public final WhenDefContext whenDef() throws RecognitionException {
		WhenDefContext _localctx = new WhenDefContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_whenDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99); match(WHEN_TAG);
			setState(100);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WHEN_CLICKED) | (1L << WHEN_RECEIVE) | (1L << WHEN_KEY) | (1L << WHEN_CLONED) | (1L << WHEN_SENSOR) | (1L << WHEN_FLAG))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IDENTIFIER) | (1L << STRINGLITERAL) | (1L << OPENP) | (1L << NUMBER))) != 0)) {
				{
				{
				setState(101); varExp();
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(107); match(OPENB);
			setState(108); body();
			setState(109); match(CLOSEB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfElseContext extends ParserRuleContext {
		public List<TerminalNode> OPENB() { return getTokens(ScratchCLikeParser.OPENB); }
		public ConditionAndOrContext conditionAndOr() {
			return getRuleContext(ConditionAndOrContext.class,0);
		}
		public TerminalNode IF_TAG() { return getToken(ScratchCLikeParser.IF_TAG, 0); }
		public TerminalNode CLOSEB(int i) {
			return getToken(ScratchCLikeParser.CLOSEB, i);
		}
		public List<BodyContext> body() {
			return getRuleContexts(BodyContext.class);
		}
		public BodyContext body(int i) {
			return getRuleContext(BodyContext.class,i);
		}
		public TerminalNode OPENB(int i) {
			return getToken(ScratchCLikeParser.OPENB, i);
		}
		public TerminalNode ELSE_TAG() { return getToken(ScratchCLikeParser.ELSE_TAG, 0); }
		public List<TerminalNode> CLOSEB() { return getTokens(ScratchCLikeParser.CLOSEB); }
		public IfElseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifElse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScratchCLikeListener ) ((ScratchCLikeListener)listener).enterIfElse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScratchCLikeListener ) ((ScratchCLikeListener)listener).exitIfElse(this);
		}
	}

	public final IfElseContext ifElse() throws RecognitionException {
		IfElseContext _localctx = new IfElseContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ifElse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111); match(IF_TAG);
			setState(112); conditionAndOr();
			setState(113); match(OPENB);
			setState(114); body();
			setState(115); match(CLOSEB);
			setState(121);
			_la = _input.LA(1);
			if (_la==ELSE_TAG) {
				{
				setState(116); match(ELSE_TAG);
				setState(117); match(OPENB);
				setState(118); body();
				setState(119); match(CLOSEB);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForLoopContext extends ParserRuleContext {
		public TerminalNode OPENB() { return getToken(ScratchCLikeParser.OPENB, 0); }
		public List<TerminalNode> SEMICOLON() { return getTokens(ScratchCLikeParser.SEMICOLON); }
		public TerminalNode CLOSEP() { return getToken(ScratchCLikeParser.CLOSEP, 0); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(ScratchCLikeParser.SEMICOLON, i);
		}
		public List<VariableSetContext> variableSet() {
			return getRuleContexts(VariableSetContext.class);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode OPENP() { return getToken(ScratchCLikeParser.OPENP, 0); }
		public VariableSetContext variableSet(int i) {
			return getRuleContext(VariableSetContext.class,i);
		}
		public TerminalNode FOR_TAG() { return getToken(ScratchCLikeParser.FOR_TAG, 0); }
		public ConditionAndOrNoPContext conditionAndOrNoP() {
			return getRuleContext(ConditionAndOrNoPContext.class,0);
		}
		public TerminalNode CLOSEB() { return getToken(ScratchCLikeParser.CLOSEB, 0); }
		public ForLoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forLoop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScratchCLikeListener ) ((ScratchCLikeListener)listener).enterForLoop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScratchCLikeListener ) ((ScratchCLikeListener)listener).exitForLoop(this);
		}
	}

	public final ForLoopContext forLoop() throws RecognitionException {
		ForLoopContext _localctx = new ForLoopContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_forLoop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123); match(FOR_TAG);
			setState(124); match(OPENP);
			setState(125); variableSet();
			setState(126); match(SEMICOLON);
			setState(127); conditionAndOrNoP();
			setState(128); match(SEMICOLON);
			setState(129); variableSet();
			setState(130); match(CLOSEP);
			setState(131); match(OPENB);
			setState(132); body();
			setState(133); match(CLOSEB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileLoopContext extends ParserRuleContext {
		public TerminalNode OPENB() { return getToken(ScratchCLikeParser.OPENB, 0); }
		public TerminalNode BOOL_TRUE() { return getToken(ScratchCLikeParser.BOOL_TRUE, 0); }
		public ConditionAndOrContext conditionAndOr() {
			return getRuleContext(ConditionAndOrContext.class,0);
		}
		public TerminalNode CLOSEP() { return getToken(ScratchCLikeParser.CLOSEP, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode OPENP() { return getToken(ScratchCLikeParser.OPENP, 0); }
		public TerminalNode WHILE_TAG() { return getToken(ScratchCLikeParser.WHILE_TAG, 0); }
		public TerminalNode CLOSEB() { return getToken(ScratchCLikeParser.CLOSEB, 0); }
		public WhileLoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileLoop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScratchCLikeListener ) ((ScratchCLikeListener)listener).enterWhileLoop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScratchCLikeListener ) ((ScratchCLikeListener)listener).exitWhileLoop(this);
		}
	}

	public final WhileLoopContext whileLoop() throws RecognitionException {
		WhileLoopContext _localctx = new WhileLoopContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_whileLoop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135); match(WHILE_TAG);
			setState(140);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(136); conditionAndOr();
				}
				break;
			case 2:
				{
				{
				setState(137); match(OPENP);
				setState(138); match(BOOL_TRUE);
				setState(139); match(CLOSEP);
				}
				}
				break;
			}
			setState(142); match(OPENB);
			setState(143); body();
			setState(144); match(CLOSEB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepeatSingleFrameLoopContext extends ParserRuleContext {
		public TerminalNode OPENB() { return getToken(ScratchCLikeParser.OPENB, 0); }
		public TerminalNode REPEAT_TAG() { return getToken(ScratchCLikeParser.REPEAT_TAG, 0); }
		public TerminalNode CLOSEP() { return getToken(ScratchCLikeParser.CLOSEP, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode OPENP() { return getToken(ScratchCLikeParser.OPENP, 0); }
		public TerminalNode SINGLE_FRAME_TAG() { return getToken(ScratchCLikeParser.SINGLE_FRAME_TAG, 0); }
		public TerminalNode NUMBER() { return getToken(ScratchCLikeParser.NUMBER, 0); }
		public TerminalNode CLOSEB() { return getToken(ScratchCLikeParser.CLOSEB, 0); }
		public RepeatSingleFrameLoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repeatSingleFrameLoop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScratchCLikeListener ) ((ScratchCLikeListener)listener).enterRepeatSingleFrameLoop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScratchCLikeListener ) ((ScratchCLikeListener)listener).exitRepeatSingleFrameLoop(this);
		}
	}
